test/tests/compiler/14_pointers/invalid_types/extra_credit/compound_assign_thru_ptr_not_lval.plx
#  The result of a compound assignment expression through a pointer isn't an
#  lvalue, so you can't take its address with &
pub fn main(none) i32 {
    i: i32 = 100
    ptr: *i32 = @i
    ptr2: *i32 = @(ptr[] -= 10)
    return 0
}
